# tiva-cmake-template

./: .gitignore  CMakeLists.txt  README.md  main.c
cmake/: Firmware.cmake  TM4C_toolchain.cmake
tm4c/: TM4C.ld  TM4C_startup.c
